# mmrag

./: .gitignore  README.md  pyproject.toml
src/mmrag/: cli.py  config.py
src/mmrag/corpus/: hashing.py  loader.py  models.py  registry.py
src/mmrag/generation/: gemini_generator.py  models.py  protocols.py
src/mmrag/index/: bm25_store.py  protocols.py  qdrant_store.py  schema.py
src/mmrag/ingestion/: chunker.py  models.py  pipeline.py  protocols.py  rendering.py  storage.py  structural.py  text_embed.py  visual.py
src/mmrag/retrieval/: colpali_retriever.py  models.py  protocols.py
tests/: conftest.py  test_cli.py  test_integration_real.py
tests/corpus/: test_hashing.py  test_loader.py  test_models.py  test_registry.py
tests/fixtures/: build_sample_pdfs.py
tests/generation/: test_gemini_generator_fake.py  test_gemini_generator_real.py  test_models.py
tests/index/: test_bm25_store.py  test_qdrant_store.py  test_schema.py
tests/ingestion/: test_chunker.py  test_dual_pipeline.py  test_dual_pipeline_real.py  test_models.py  test_pipeline.py  test_storage.py  test_structural_fake.py  test_structural_real.py  test_text_embed_fake.py  test_text_embed_real.py  test_visual_fake.py  test_visual_real.py
tests/retrieval/: test_colpali_retriever_real.py  test_models.py
