[project]
name = "mmrag"
version = "0.1.0"
description = "Multi-modal document intelligence RAG (ColPali-based)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "pymupdf>=1.24",
    "pillow>=10.3",
    "numpy>=1.26",
    "torch>=2.3",
    "transformers>=4.44",
    "colpali-engine>=0.3.4",
]

[project.scripts]
rag-cli = "mmrag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmrag"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "reportlab>=4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: tests that load real ColPali weights (skip by default via -m 'not slow')",
]
asyncio_mode = "auto"
